--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-map-gl": "^4.1.2",
-    "react-mapbox-gl-geocoder": "^1.0.3"
+    "react-mapbox-gl-geocoder": "^1.0.3",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
